--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
         - cd xdcs-frontend
         - npm install
         - npm run lint
-        - npm run build
+        - npm run build-prod
 
     - name: "Build & test agent"
       stage: Build
