--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "npm run generate && ng build && npm run war",
+    "build-prod": "npm run generate && ng build --prod && npm run war",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -14,25 +15,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.0",
+    "@angular/animations": "~8.2.14",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/core": "~8.1.0",
-    "@angular/forms": "~8.1.0",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/platform-browser-dynamic": "~8.1.0",
-    "@angular/router": "~8.1.0",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "@auth0/angular-jwt": "^3.0.0",
-    "@fortawesome/angular-fontawesome": "~0.4.0",
+    "@fortawesome/angular-fontawesome": "~0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@primer/octicons": "^9.1.1",
     "angular-split": "^3.0.2",
-    "angular-tree-component": "~8.4.1",
+    "angular-tree-component": "~8.5.1",
     "bootstrap": "~4.3.1",
-    "core-js": "^3.1.4",
+    "core-js": "^3.4.2",
     "ng2-ace-editor": "~0.3.9",
     "ngx-bootstrap": "^5.1.1",
     "ngx-clipboard": "^12.2.1",
@@ -44,13 +45,14 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
+    "@angular-devkit/build-angular": "~0.803.19",
     "@angular/cli": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~12.6.1",
+    "angular-file": "^2.0.0",
     "codelyzer": "~5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
